c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/assign_ternary.c
int main(void) {
    int a = 0;
    a = 1 ? 2 : 3;
    return a;
}