c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_semantics/extra_credit/duplicate_labels.c
/* Label names must be unique within a function */
int main(void) {
    int x = 0;
label:
    x = 1;
label:
    return 2;
}